--- a/Lmyc/Views/Account/Register.cshtml
+++ b/Lmyc/Views/Account/Register.cshtml
@@ -84,7 +84,7 @@
                 <input asp-for="EmergencyContactOne" class="form-control" />
                 <span asp-validation-for="EmergencyContactOne" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Register</button>
+            <button type="submit" class="button">Register</button>
         </form>
     </div>
 </div>
